Fixed header alignment

--- a/scss/base/_nav.scss
+++ b/scss/base/_nav.scss
@@ -177,3 +177,7 @@
     overflow: hidden;
   }
 }
+
+.logo-box {
+  flex-grow: 1;
+}
