--- a/scss/base/_structure.scss
+++ b/scss/base/_structure.scss
@@ -206,3 +206,7 @@ p.text-highlight-description {
 .main-content {
   min-height: 45vh;
 }
+
+.grow {
+  flex-grow: 1;
+}
